// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIcon different states identified 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-orange-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-exclamation fa-fw "
      data-icon="exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 192 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`StatusIcon different states investigating 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-red-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-exclamation fa-fw "
      data-icon="exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 192 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`StatusIcon different states recovering 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-orange-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-exclamation fa-fw "
      data-icon="exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 192 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`StatusIcon different states resolved 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-green-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check fa-fw "
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`StatusIcon it renders without problems 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-green-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check fa-fw "
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;
